Feat : 메인 관련 API 응답 수정
